# MolBench_tool

./: .gitignore  README.md  pyproject.toml
examples/: 1_download_feature.py  2_test_bench.py  run.sh
molbench/: benchmark.py  data_utils.py  feature_utils.py  metric_utils.py  model_utils.py  split_utils.py
